syntax = "proto3";

package common.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

option go_package = "gen/go";

// Generic status message for RPC responses and error reporting
message Status {
  int32 code = 1;
  string message = 2;
  google.protobuf.Struct details = 3;
}

// Represents a file with name, mime type, and raw content
message File {
  string file_name = 1;
  string mime_type = 2;
  bytes content = 3;
}

// Generic key-value metadata map, useful for tagging or custom attributes
message Metadata {
  map<string, string> fields = 1;
}

// Detailed structured error information
message ErrorDetail {
  string type = 1;             // e.g. "ValidationError", "AuthError"
  string message = 2;
  google.protobuf.Struct info = 3;  
}

// Timestamp wrapper for events or audit logs
message TimestampedEvent {
  google.protobuf.Timestamp created_at = 1;
}

// Pagination info for list endpoints
message Pagination {
  int32 page = 1;
  int32 page_size = 2;
  int32 total_items = 3;
}

// Generic API response wrapper with status and optional payload
message ResponseWrapper {
  Status status = 1;
  google.protobuf.Any payload = 2;
}

// Common ID wrapper for referencing entities like workflows, executions, etc.
message EntityId {
  string id = 1;
}

// Result of workflow execution or similar async process
message ExecutionResult {
  string execution_id = 1;
  Status status = 2;
  google.protobuf.Struct output = 3;
}
