syntax = "proto3";

package iam.v2;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/spounge-ai/spounge-proto/gen/go/iam/v2;iamv2";

enum ManagedSecretType {
  MANAGED_SECRET_TYPE_UNSPECIFIED = 0;
  MANAGED_SECRET_TYPE_CUSTOM = 1;
  MANAGED_SECRET_TYPE_ITEM = 2;
  MANAGED_SECRET_TYPE_COLLECTION = 3;
}

message ManagedSecret {
  string id = 1;
  string user_id = 2;
  string name = 3;

  ManagedSecretType type = 4;

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;

  oneof secret_data {
      google.protobuf.Struct collection_data = 7; 
      google.protobuf.Struct item_data = 8;     
  }
}
